# IMREDD-IoT

./: Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  bot.py  crud.py  http.py  models.py  router.py  schemas.py
config/: config.py
db/: db.py
iot/: __init__.py  crud.py  models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 5fca2ffe98a2_users.py  ae2e4e93855f_new_db.py  c3f038820a4f_initial.py  f76dc7a917d8_initial.py
