[tool.poetry]
name = "imredd-iot"
version = "0.1.0"
description = ""
authors = ["PatrickKvartsaniy <kvartsaniy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
SQLAlchemy = "^1.4.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
