[tool.poetry]
name = "imredd-iot"
version = "0.1.0"
description = ""
authors = ["PatrickKvartsaniy <kvartsaniy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"
asyncpg = "^0.27.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
